--- a/Snakemake/workflow/profile/config.yaml
+++ b/Snakemake/workflow/profile/config.yaml
@@ -3,7 +3,8 @@ use-conda: true
 jobscript: "jobscript.sh"
 cluster-config: "cluster.json"
 jobname: "{rule}.{jobid}"
-drmaa: " -P roslin_HighlanderLab -cwd -l h_vmem={cluster.mem} -l h_rt={cluster.time} -pe sharedmem {cluster.threads} -R y"
+drmaa: " -P roslin_HighlanderLab -cwd -l h_vmem={cluster.mem} -l
+h_rt={cluster.time} -l rl9=true -pe sharedmem {cluster.threads} -R y"
 rerun-incomplete: true
 rerun-triggers: [mtime, input]
 local-cores: 99
